
2020-06-16  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (print_fields): minor improvement to the symbol listing:
	  note EXTERNAL, BASED and GLOBAL attributes
	* field.c (pic_digits): changed type from int to unsigned char as it
	  is used for accessing arrays

	FR #193 work on TYPE TO / SAME AS, LIKE
	* parser.y (usage_clause): fixes for USAGE type-name
	* field.c (copy_into_field): first working draft for LIKE-integer,
	  fixes for TYPE TO / USAGE type-name

2020-06-15  Simon Sobisch <simonsobisch@gnu.org>

	FR #382 -Wextra instead of -W
	* warning.def, cobc.c, error.c, field.c, tree.c, typeck.c, parser.y:
	  renamed cb_warn_extra to cb_warn_additional
	* warning.def, help.c: define -Wextra with fallback -W
	* cobc.c: implement -Wno-error[=warning]

	* cobc.c (process_run): use of new COBC_NAME + COBCRUN_NAME now defined in
	  defaults.h, if available use the fullname of the current process instead
	  of fixed "cobc" to get the path for cobcrun, extract some code to
	  resolve_name_from_cobc

2020-06-14  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_run): instead of hard-wired call of
	  "cobcrun + COB_EXE_EXT" resolve its name by environment COBCRUN or,
	  in case it isn't set, by cobc's fullpath with replacing cobc->cobcrun,
	  fixing bug #573
	* cobc.c (main, process_run): fix compile from stdin with job-run
	* field.c (validate_any_length_item): allow ANY LENGTH for PIC 1

2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_command_line) [_WIN32]: simplified code;
	  only convert from /opt to -opt if POSIXLY_CORRECT is not set;
	  added conversion from /? to --help

2020-06-10  Simon Sobisch <simonsobisch@gnu.org>

	Bug #635 added checks for duplicate USING BY REFERENCE items
	* parser.y (emit_entry), typeck.c (cb_emit_call): collect BY REFERENCE
	  items and check for duplicates

	FR #193 work on TYPE TO / SAME AS, LIKE
	* field.c (copy_into_field), tree.h: split out to static functions;